--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.yandex.money.api:yandex-money-sdk-java:4.1.5'
 }
