--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PINActivity"
+            android:name=".PinActivity"
             android:windowSoftInputMode="stateVisible|adjustResize" />
     </application>
 
