--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.yandex.money.api:yandex-money-sdk-java:4.2.1'
 }
