Auxiliary renaming (back)
Git got lagging since class renaming API* to Api* etc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PinCodeActivity"
+            android:name=".PinActivity"
             android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
             android:name=".AccountActivity"
