--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignInActivity">
+        <activity android:name=".activities.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".PinActivity"
+            android:name=".activities.PinActivity"
             android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
-            android:name=".AccountActivity"
+            android:name=".activities.AccountActivity"
             android:launchMode="singleTop"
             android:label="@string/my_account" />
     </application>
